--- a/css/home.css
+++ b/css/home.css
@@ -8,3 +8,54 @@ input.ng-valid{
 .borderBlackStyle{
     border: 1px solid black;
 }
+/*_____USER_____*/
+.container__user{
+    margin: 50px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center; 
+}
+.user{
+    margin: 50px;
+    width: 600px;
+    height: 300px;
+    border: 3px ridge wheat;
+    background-color: blanchedalmond;  
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center; 
+}
+.user__photo{
+    margin-left: 50px;
+    width: 200px;
+    height: 200px;
+}
+.user__photo img{
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+.user__prev{
+    width: 300px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: space-between;
+}
+.user__prev__data{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.user__prev__data p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 100;
+    text-align: left;
+}
