--- a/views/home.html
+++ b/views/home.html
@@ -16,9 +16,9 @@
                             <p><b>Phone:</b> {{user.phone}}</p>
                             <p><b>Email:</b> {{user.email}}</p>
                             <div class="user__prev__data_button">
-                                <button ng-click="HomeCtrl.showUser(user.id)">Show</button>
-                                <button ng-click="HomeCtrl.editUser(user.id)">Edit</button>
-                                <button ng-click="HomeCtrl.removeUser(user)">Remove</button>
+                                <button ng-click="HomeCtrl.showUser(user.id)"><img src="/img/show.png"></button>
+                                <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
+                                <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
                             </div>
                         </p>
                     </div>
@@ -26,74 +26,76 @@
             </div>
         </div>
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <div class="nav__bar">
-                <ul>
-                    <li ng-click="HomeCtrl.changeView(0)">Users</li>
-                    <li ng-click="HomeCtrl.changeView(1)">Giphy</li>
-                    <li ng-click="HomeCtrl.changeView(2)">Marvel</li>
-                </ul>
-            </div>
-            <div ng-show="HomeCtrl.showView == 0" ng-hide="HomeCtrl.showView != 0">
-                <div class="newUser" ng-model-options="{allowInvalid: true, debounce: 200}">
-                    <form name="HomeCtrl.formUser" ng-model="HomeCtrl.formUser" class="newUser__form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Name: </h3>
-                        <input name="HomeCtrl.Name" type="text" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>E-mail: </h3>
-                        <input name="HomeCtrl.Email" type="email" ng-required="true" ng-model="HomeCtrl.user.email" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Phone: </h3>
-                        <input name="HomeCtrl.Phone" type="number" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                        <h3>Photo: </h3>
-                        <input name="HomeCtrl.Photo" type="text" ng-required="true" ng-model="HomeCtrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
-                    </form>
+            <div class="container_Search">
+                <div class="nav__bar">
+                    <ul>
+                        <li ng-click="HomeCtrl.changeView(0)">Users</li>
+                        <li ng-click="HomeCtrl.changeView(1)">Giphy</li>
+                        <li ng-click="HomeCtrl.changeView(2)">Marvel</li>
+                    </ul>
                 </div>
-            </div>
-            <div ng-show="HomeCtrl.showView == 1" ng-hide="HomeCtrl.showView != 1">
-                <div class="user__gifs__favourite">
-                    <div class="user__gifs__favourite" ng-repeat="giphy in HomeCtrl.user.giphy track by giphy.id">
-                        <img class="user__gifs__favourite__photo" ng-click="HomeCtrl.deleteGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                <div ng-show="HomeCtrl.showView == 0" ng-hide="HomeCtrl.showView != 0">
+                    <div class="newUser" ng-model-options="{allowInvalid: true, debounce: 200}">
+                        <form name="HomeCtrl.formUser" ng-model="HomeCtrl.formUser" class="newUser__form" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <h3>Name: </h3>
+                            <input name="HomeCtrl.Name" type="text" ng-required="true" ng-model="HomeCtrl.user.name" ng-minlength="3" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <h3>E-mail: </h3>
+                            <input name="HomeCtrl.Email" type="email" ng-required="true" ng-model="HomeCtrl.user.email" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <h3>Phone: </h3>
+                            <input name="HomeCtrl.Phone" type="number" ng-required="true" ng-model="HomeCtrl.user.phone" ng-minlength="9" ng-maxlength="9" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                            <h3>Photo: </h3>
+                            <input name="HomeCtrl.Photo" type="text" ng-required="true" ng-model="HomeCtrl.user.photo" ng-minlength="5" ng-model-options="{updateOn: 'blur', allowInvalid : '$inherit'}">
+                        </form>
                     </div>
                 </div>
-                <div class="user__gifs__search">
-                    <form name="HomeCtrl.formSG">
-                        <input name="HomeCtrl.SG" type="text" placeholder="Search Giphy" ng-model="HomeCtrl.search_giphy" ng-required="true" ng-minlength="1">
-                    </form>
-                    <p class="user__gifs__search__type">
-                        <a ng-class="{blackStyle:(HomeCtrl.rectOrTrend)}" ng-click="HomeCtrl.RecentsTrending(true)">Recents</a>
-                        <a ng-class="{blackStyle:(!HomeCtrl.rectOrTrend)}" ng-click="HomeCtrl.RecentsTrending(false)">Trending</a>
-                    </p>
-                    <button ng-disabled="HomeCtrl.formSG.$invalid" ng-click="HomeCtrl.getGiphies()">Search Giphy</button>
-                </div>
-                <div class="user__gifs__show">
-                    <div class="user__gifs__show__views" ng-repeat="giphy in HomeCtrl.giphyList track by giphy.id">
-                        <img class="user__gifs__show__views__photo" ng-class="{borderBlackStyle:HomeCtrl.checkGiphyUser(giphy)}" ng-click="HomeCtrl.addGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                <div ng-show="HomeCtrl.showView == 1" ng-hide="HomeCtrl.showView != 1">
+                    <div class="user__gifs__favourite">
+                        <div class="user__gifs__favourite" ng-repeat="giphy in HomeCtrl.user.giphy track by giphy.id">
+                            <img class="user__gifs__favourite__photo" ng-click="HomeCtrl.deleteGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                        </div>
+                    </div>
+                    <div class="user__gifs__search">
+                        <form name="HomeCtrl.formSG">
+                            <input name="HomeCtrl.SG" type="text" placeholder="Search Giphy" ng-model="HomeCtrl.search_giphy" ng-required="true" ng-minlength="1">
+                        </form>
+                        <p class="user__gifs__search__type">
+                            <a ng-class="{blackStyle:(HomeCtrl.rectOrTrend)}" ng-click="HomeCtrl.RecentsTrending(true)">Recents</a>
+                            <a ng-class="{blackStyle:(!HomeCtrl.rectOrTrend)}" ng-click="HomeCtrl.RecentsTrending(false)">Trending</a>
+                        </p>
+                        <button ng-disabled="HomeCtrl.formSG.$invalid" ng-click="HomeCtrl.getGiphies()">Search Giphy</button>
+                    </div>
+                    <div class="user__gifs__show">
+                        <div class="user__gifs__show__views" ng-repeat="giphy in HomeCtrl.giphyList track by giphy.id">
+                            <img class="user__gifs__show__views__photo" ng-class="{borderBlackStyle:HomeCtrl.checkGiphyUser(giphy)}" ng-click="HomeCtrl.addGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div ng-show="HomeCtrl.showView == 2" ng-hide="HomeCtrl.showView != 2">
-                <div class="user__marvel__favourite">
-                    <div class="user__marvel__favourite" ng-repeat="marvel in HomeCtrl.user.marvel track by marvel.id">
-                        <img class="user__marvel__favourite__photo" ng-click="HomeCtrl.deleteMarvelFav(marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
+                <div ng-show="HomeCtrl.showView == 2" ng-hide="HomeCtrl.showView != 2">
+                    <div class="user__marvel__favourite">
+                        <div class="user__marvel__favourite" ng-repeat="marvel in HomeCtrl.user.marvel track by marvel.id">
+                            <img class="user__marvel__favourite__photo" ng-click="HomeCtrl.deleteMarvelFav(marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
+                        </div>
+                    </div>
+                    <div class="user__marvel__search">
+                        <form name="HomeCtrl.formSM">
+                            <input type="text" placeholder="Search Marvel" ng-model="HomeCtrl.search_marvel" ng-required="true" ng-minlength="1">
+                            <select ng-model="HomeCtrl.typeMarvel" ng-required="true">
+                                <option disabled selected value>--Please select--</option>
+                                <option ng-repeat="marvel in HomeCtrl.marvelListSelect track by $index">{{marvel}}</option>
+                            </select>
+                        </form>
+                        <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getMarvel()">Search Marvel</button>
+                    </div>
+                    <div class="user__marvel__show">
+                        <div class="user__marvel__show__views" ng-repeat="marvel in HomeCtrl.marvelList track by marvel.id">
+                            <img class="user__marvel__show__views__photo" ng-class="{borderBlackStyle:HomeCtrl.checkMarvelUser(marvel)}" ng-click="HomeCtrl.addMarvelFav(marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
+                        </div>
                     </div>
                 </div>
-                <div class="user__marvel__search">
-                    <form name="HomeCtrl.formSM">
-                        <input type="text" placeholder="Search Marvel" ng-model="HomeCtrl.search_marvel" ng-required="true" ng-minlength="1">
-                        <select ng-model="HomeCtrl.typeMarvel" ng-required="true">
-                            <option disabled selected value>--Please select--</option>
-                            <option ng-repeat="marvel in HomeCtrl.marvelListSelect track by $index">{{marvel}}</option>
-                        </select>
-                    </form>
-                    <button ng-disabled="HomeCtrl.formSM.$invalid" ng-click="HomeCtrl.getMarvel()">Search Marvel</button>
+                <div class="button__Create__Modify__User">
+                        <button ng-if="!HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.addNewUser()">Create</button>
+                        <button ng-if="HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.modifyUser()">Modify</button>
                 </div>
-                <div class="user__marvel__show">
-                    <div class="user__marvel__show__views" ng-repeat="marvel in HomeCtrl.marvelList track by marvel.id">
-                        <img class="user__marvel__show__views__photo" ng-class="{borderBlackStyle:HomeCtrl.checkMarvelUser(marvel)}" ng-click="HomeCtrl.addMarvelFav(marvel)" ng-src="{{marvel.photo}}" onerror="this.src='/img/no_image.png'">
-                    </div>
-                </div>
-            </div>
-            <div class="button__Create__Modify__User">
-                    <button ng-if="!HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.addNewUser()">Create</button>
-                    <button ng-if="HomeCtrl.edit" ng-disabled="!HomeCtrl.checkValid()" ng-click="HomeCtrl.modifyUser()">Modify</button>
             </div>
         </div>
     </div>
