--- a/css/home.css
+++ b/css/home.css
@@ -97,10 +97,41 @@ input.ng-valid{
 }
 /*_____Container General Giphy and Marvel______*/
 .container_Search{
+    height: 800px;
     border: 1px solid rgba(128, 255, 0, 0.4);
     border-left: 1px solid chartreuse;
     background-color: rgba(156, 205, 50, 0.4);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
 }
 .newUser{
-    
+    margin-left: 30px;
+    width: 90%;
+    height: 600px;
+}
+.newUser form input{
+    width: 300px;
+    height: 25px;
+    box-sizing: content-box;
+    border: 1px ridge rgba(165, 42, 42, 0.5);
+    background-color: rgba(247, 169, 81, 0.555);
+    box-shadow: 1px 1px 1px 1px rgba(247, 169, 81, 0.555);
+    border-radius: 7px 7px 7px 7px;
+}
+.button__Create__Modify__User{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.button__Create__Modify__User button{
+    border: 1px ridge rgba(165, 42, 42, 0.5);
+    background-color: rgba(247, 169, 81, 0.555);
+    box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(165, 42, 42, 0.5);
+    height: 40px;
+    width: 100px;
 }
