--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+        <div class="col-md-5 col-lg-5">
             <div class="container__user">
                 <div class="user" ng-repeat="user in HomeCtrl.usersList track by user.id">
                     <div class="user__photo">
@@ -12,20 +12,20 @@
                     </div>
                     <div class="user__prev">
                         <p class="user__prev__data">
-                            <p><b>Name:</b> {{user.name}}</p>
-                            <p><b>Phone:</b> {{user.phone}}</p>
-                            <p><b>Email:</b> {{user.email}}</p>
-                            <div class="user__prev__data_button">
-                                <button ng-click="HomeCtrl.showUser(user.id)"><img src="/img/show.png"></button>
-                                <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
-                                <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
-                            </div>
+                            <p><b>Name:</b> {{user.name}}<br>
+                            <b>Phone:</b> {{user.phone}}<br>
+                            <b>Email:</b> {{user.email}}</p>
                         </p>
+                        <div class="user__prev__data_button">
+                            <button ng-click="HomeCtrl.showUser(user.id)"><img src="/img/show.png"></button>
+                            <button ng-click="HomeCtrl.editUser(user.id)"><img src="/img/edit.png"></button>
+                            <button ng-click="HomeCtrl.removeUser(user)"><img src="/img/delete.png"></button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="col-md-7 col-lg-7">
             <div class="container__R">
                 <div class="nav__bar">
                     <ul>
@@ -53,7 +53,7 @@
                 <div class="user__container" ng-show="HomeCtrl.showView == 1" ng-hide="HomeCtrl.showView != 1">
                     <div class="user__favourite__container">
                         <div class="user__favourite" ng-repeat="giphy in HomeCtrl.user.giphy track by giphy.id">
-                            <img class="user__gifs__favourite__photo" ng-click="HomeCtrl.deleteGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
+                            <img class="user__favourite__photo" ng-click="HomeCtrl.deleteGifsFav(giphy)" ng-src="{{giphy.photo}}" onerror="this.src='/img/no_image.png'">
                         </div>
                     </div>
                     <div class="user__search">
